# CodingAssessment_02-18-26

./: README.md  pyproject.toml  workbook.ipynb
data/: EWN-dataset-year-end-2024_feb06.xlsx  USMPD.xlsx  ~$USMPD.xlsx
data/monetary-policy-surprises/: README.md  mps.R  mps.csv  mps_minutes.csv  y1.csv
