[project]
name = "codingassessment-02-18-26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lxml>=6.0.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=2.1,<2.2",
    "pandas-datareader>=0.10.0",
    "fredapi>=0.5.2",
    "openpyxl>=3.1.5",
    "xlrd>=2.0.2",
]
